<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".registraractivity">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="190dp"
        android:layout_height="38dp"
        android:text="@string/registrar"
        android:textColor="@color/black"
        android:textSize="27sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresa_los_detalles_de_tu_cuenta"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="168dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="237dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:text="@string/nombre"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="237dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="225dp"
        android:layout_height="47dp"
        android:background="@color/white"
        android:text="@string/apellidos"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="323dp" />

    <Button
        android:id="@+id/button7"
        android:layout_width="236dp"
        android:layout_height="54dp"
        android:background="@color/white"
        android:text="@string/correo"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="69dp"
        tools:layout_editor_absoluteY="384dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="244dp"
        android:layout_height="42dp"
        android:background="@color/white"
        android:text="Contraseña"
        android:textColor="@color/black"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="453dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Estoy de acuerdo con los términos "
        android:textColor="@color/black"
        android:textSize="17sp"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="76dp"
        tools:layout_editor_absoluteY="511dp" />

    <Button
        android:id="@+id/button10"
        android:layout_width="244dp"
        android:layout_height="45dp"
        android:background="#AC0E1A"
        android:text="@string/registrarse"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="572dp" />

    <Button
        android:id="@+id/button11"
        android:layout_width="221dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="Iniciar sesion con Google"
        android:textColor="@color/black"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="638dp" />


</androidx.constraintlayout.widget.ConstraintLayout>